created the swagger documentation for creating a new user account
