# app/Http/Controllers/Authentication/RegisterController.php
@@ -12,6 +12,56 @@ use Exception;
 
 class RegisterController extends Controller
 {
+    /**
+     * @OA\Post(
+     ** path="/api/v1/user/create",
+     *   tags={"User"},
+     *   summary="Create A User Account",
+     *   operationId="userCreate",
+     *
+     *   @OA\Parameter(name="first_name",in="query",required=true, @OA\Schema(type="string")),
+     *   @OA\Parameter(name="last_name",in="query",required=true, @OA\Schema(type="string")),
+     *
+     *   @OA\Parameter(
+     *      name="email",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Parameter(
+     *      name="password",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *          type="string"
+     *      )
+     *   ),
+     *   @OA\Parameter(name="password_confirmation",in="query",required=true, @OA\Schema(type="string")),
+     *   @OA\Parameter(name="is_marketing",in="query",required=true, @OA\Schema(type="boolean")),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success"
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=500,
+     *      description="Internal Server Error"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Page Not found"
+     *   ),
+     *   @OA\Response(
+     *      response=422,
+     *      description="Unprocessable Entity"
+     *   )
+     *)
+     **/
     public function __invoke(UserRegistrationRequest $request, CreateUserAction $createUserAction, IssueJwtTokenAction $issueJwtTokenAction)
     {
         try{
