# storage/api-docs/api-docs.yaml
@@ -40,6 +40,60 @@ paths:
           description: 'Page Not found'
         422:
           description: 'Unprocessable Entity'
+  /api/v1/user/create:
+    post:
+      tags:
+        - User
+      summary: 'Create A User Account'
+      operationId: userCreate
+      parameters:
+        -
+          name: first_name
+          in: query
+          required: true
+          schema:
+            type: string
+        -
+          name: last_name
+          in: query
+          required: true
+          schema:
+            type: string
+        -
+          name: email
+          in: query
+          required: true
+          schema:
+            type: string
+        -
+          name: password
+          in: query
+          required: true
+          schema:
+            type: string
+        -
+          name: password_confirmation
+          in: query
+          required: true
+          schema:
+            type: string
+        -
+          name: is_marketing
+          in: query
+          required: true
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: Success
+        401:
+          description: Unauthenticated
+        500:
+          description: 'Internal Server Error'
+        404:
+          description: 'Page Not found'
+        422:
+          description: 'Unprocessable Entity'
 components:
   securitySchemes:
     jwt:
